new file:   css/services.css 	modified:   index.html 	new file:   res/batt.svg 	new file:   res/currency.jpg 	new file:   res/email.jpg 	new file:   res/email1.jpg 	new file:   res/email2.jpg 	new file:   res/email2.png 	new file:   res/footer.png 	new file:   res/laptoprep.svg 	new file:   res/lcdlady.svg 	new file:   res/mailsent.svg 	new file:   res/mobmainte.jpg 	new file:   res/pass.svg 	new file:   res/pass1.jpg 	new file:   res/pass1.svg 	new file:   res/pcerror.jpg 	new file:   res/pcerror2.jpg 	new file:   res/pcfix.jpg 	new file:   res/subscribe.jpg 	new file:   services.html 	modified:   styles.css

--- a/styles.css
+++ b/styles.css
@@ -87,6 +87,8 @@ nav{
 }
 /**navbar ends**/
 
+
+
 /**cards**/
 .theme-text {
   color: #2d3d6c;
@@ -108,6 +110,22 @@ nav{
 }
 
 /**cards ends**/
+
+/**Why choose us**/
+.feature{
+  background-color: #2d3d6c;
+}
+/**Why choose us end**/
+
+.faqs-title{
+  color: #2d3d6c;
+}
+.newsletter{
+  background-color: #2d3d6c;
+}
+.cont-newsletter{
+  border-bottom: 1px solid rgba(256, 256, 256, .1);
+}
 
 /**footer**/
 .footer{
@@ -195,6 +213,7 @@ nav{
 /**footer ends**/
 
 
+/*Navbar responsiveness*/
 @media only screen and (min-width: 900px) {
 
   
