--- a/css/devices.css
+++ b/css/devices.css
@@ -86,7 +86,46 @@
   }
   /**navbar ends**/
 
+/*banner start*/
+.masthead{
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.masthead::after{
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.55);
+}
+.content-srv{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+.content-srv h2{
+  font-size: 50px;
+  color: #dbe0f0;
+  margin-bottom: 20px;
+}
+.content-srv h2 span{
+  color: #1f194c;
+}
+.content-srv p{
+  font-size: 20px;
+  color: white;
+  opacity: 0.8;
+}
 
+/*banner ends*/
 
 
 
