--- a/css/styles.css
+++ b/css/styles.css
@@ -127,6 +127,96 @@ nav{
   border-bottom: 1px solid rgba(256, 256, 256, .1);
 }
 
+/*Clients Review start**/
+.testimonials{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+}
+.testimonial-heading{
+  letter-spacing: 1px;
+  margin: 30px 0px;
+  padding: 10px 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.testimonial-heading span{
+  font-size: 3.2rem;
+  font-weight: 500;
+  color: #2d3d6c;
+}
+.testimonial-box-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 100%;
+}
+.testimonial-box{
+  width: 500px;
+  box-shadow: 2px 2px 30px rgba(0, 0, 0, 0.1);
+  background-color: #FFFFFF;
+  padding: 20px;
+  margin: 15px;
+  cursor: pointer;
+}
+.profile-img{
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  overflow: hidden;
+  margin-right: 10px;
+}
+.profile-img img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+.profile{
+  display: flex;
+  align-items: center;
+}
+.name-user{
+  display: flex;
+  flex-direction: column;
+
+}
+.name-user strong{
+  color: #2d3d6c;
+  font-size: 1.1rem;
+  letter-spacing: 0.5px;
+}
+.name-user span{
+  color: #93a3d2;
+  font-size: 0.8rem;
+}
+.reviews{
+  color: #2d3d6c;
+  text-shadow: 4px 4px 10px #4b4b4b;
+}
+.box-top{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
+.client-comment p{
+  font-size: 0.9rem;
+  color: #4b4b4b;
+}
+.testimonial-box:hover{
+  transform: translateY(-10px);
+  transition: all ease 0.3s;
+}
+
+
+/**Clients Review End*/
+
 /**footer**/
 .footer{
   background-color: #2d3d6c;
@@ -247,5 +337,29 @@ nav{
   .nav-list li a.active, .nav-list li a:hover{
    
     color: #93a3d2;
+  }
+}
+
+@media(max-width:1060px){
+  .testimonial-box{
+    width: 45%;
+    padding: 10px;
+  }
+}
+@media(max-width:790px){
+  .testimonial-box{
+    width: 100%;
+  }
+  .testimonial-heading h1{
+    font-size: 1.4rem;
+  }
+}
+@media(max-width:340px){
+  .box-top{
+    flex-wrap: wrap;
+    margin-bottom: 10px;
+  }
+  .reviews{
+    margin-top: 10px;
   }
 }
