modified:   aboutus.html 	modified:   contactus.html 	modified:   css/aboutus.css 	modified:   css/contactus.css 	modified:   css/services.css 	modified:   css/styles.css 	modified:   index.html 	deleted:    res/broken.png 	deleted:    res/client1.jpg 	deleted:    res/client2.jpg 	deleted:    res/client3.jpg 	deleted:    res/client4.jpg 	new file:   res/contactus.svg 	deleted:    res/laptop.png 	deleted:    res/lcd.png 	deleted:    res/realme.png 	deleted:    res/realme.webp 	deleted:    res/realme2.png 	deleted:    res/realmelogo.png 	deleted:    res/repair.png 	modified:   services.html

--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -92,10 +92,24 @@
   border: 1px solid transparent;
   transition: .5s;
   box-shadow:  rgba(0, 0, 0, 0.5);
+  
+}
+.team-cont{
+  background-color: #2d3d6c;
+}
+.tech-name{
+  color: #dbe0f0;
+}
+.team-cont a{
+  background-color: #dbe0f0;
+  border-radius: 50%;
+}
+.team-cont a:hover{
+  background-color: #93a3d2;
 }
 
 .team-item:hover {
-  border-color: #2d3d6c;
+  border-color: #93a3d2;
 }
 
 
