--- a/css/contactus.css
+++ b/css/contactus.css
@@ -112,6 +112,10 @@
     transform: translate(-50%, -50%);
     text-align: center;
   }
+  .content-dev h3{
+    font-size: 30px;
+    color: #dbe0f0;
+  }
   .content-dev h2{
     font-size: 50px;
     color: #dbe0f0;
@@ -134,64 +138,8 @@
   /*banner ends*/
 
 /*Contact US Start*/
-.contactUs{
-    position: relative;
-    width: 100%;
-    padding: 40px 100px;
-}
-.contactUs .title{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 2em;
-}
-.contactUs .title h2{
-    color: #2d3d6c;
-    font-weight: 500;
-}
-.form{
-    grid-area: form;
-}
-.info{
-    grid-area: info;
-}
-.map{
-    grid-area: map;
-}
-.contact{
-    padding: 40px;
-    background-color: #2d3d6c;
-    box-shadow: 0 5px 35px rgba(0, 0, 0, 0.55);
-}
-.box{
-    position: relative;
-    display: grid;
-    grid-template-columns: 2fr 1fr;
-    grid-template-rows: 5fr 4fr;
-    grid-template-areas: 
-    "form info"
-    "form map";
-    grid-gap:20px;
-    margin-top: 20px;
-}
-.contact h3{
-    color: #dbe0f0;
-    font-weight: 500;
-    font-size: 1.4em;
-    margin-bottom: 10px;
-}
-.infobox{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.map{
-    padding: 0;
-}
-.map iframe{
-    width: 100%;
-    height: 100%;
-}
+
+
 
 
 
@@ -331,24 +279,4 @@
       }
     }
     /*Responsive contact*/
-@media (max-width: 991px){
-    .contactUs{
-        padding: 10px;
-    }
-    .box{
-        position: relative;
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: auto;
-        grid-template-areas: 
-        "form"
-        "info"
-        "map";
-    }
-    
-    .map{
-        min-height: 300px;
-    }
 
-    
-}
